--- a/event_details_1.html
+++ b/event_details_1.html
@@ -35,8 +35,8 @@
         <h2>Galleries</h2>
         <div class="slider-container">
             <div class="slider">
-                <img src="acm1.jfif" alt="Gallery 1">
-                <img src="acm2.jfif" alt="Gallery 2">
+                <img src="acm1.jpg" alt="Gallery 1">
+                <img src="acm2.jpg" alt="Gallery 2">
             </div>
             <button class="prev-btn" onclick="prevSlide()">&#10094;</button>
             <button class="next-btn" onclick="nextSlide()">&#10095;</button>
@@ -52,8 +52,8 @@
         <h2>Galleries</h2>
         <div class="slider-container">
             <div class="slider">
-                <img src="img1.jfif" alt="Gallery 1">
-                <img src="acm2.jfif" alt="Gallery 2">
+                <img src="img1.jpg" alt="Gallery 1">
+                <img src="acm2.jpg" alt="Gallery 2">
             </div>
             <button class="prev-btn" onclick="prevSlide()">&#10094;</button>
             <button class="next-btn" onclick="nextSlide()">&#10095;</button>
@@ -69,7 +69,7 @@
         <div class="slider-container">
             <div class="slider">
                 <img src="img2.png" alt="Gallery 1">
-                <img src="acm2.jfif" alt="Gallery 2">
+                <img src="acm2.jpg" alt="Gallery 2">
             </div>
             <button class="prev-btn" onclick="prevSlide()">&#10094;</button>
             <button class="next-btn" onclick="nextSlide()">&#10095;</button>
