--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,10 @@
 <h2 style="align:center">Student Coordinators:</h2>
 
     <div class="box-container"style="float:left">
-        <p>Name: P. Muralidhar</p>
+        <p>Name: J.Varshini</p>
         <p>Branch: CSE</p>
-        <p>EMAIL: 21501a05c9@pvpsit.ac.in</p>
-        <p>Phone no: 7287944198</p>
+        <p>EMAIL: 21501a0568@pvpsit.ac.in</p>
+        <p>Phone no: 8688185435</p>
     </div>
     <div class="box-container"style="float:left">
         <p>Name: K. Tejasree</p>
