--- a/contact.html
+++ b/contact.html
@@ -37,19 +37,19 @@
         <p>Name: J.Varshini</p>
         <p>Branch: CSE</p>
         <p>EMAIL: 21501a0568@pvpsit.ac.in</p>
-        <p>Phone no: 8688185435</p>
+        <p>Phone no: 91*********</p>
     </div>
     <div class="box-container"style="float:left">
         <p>Name: K. Tejasree</p>
         <p>Branch: CSE</p>
         <p>EMAIL: 21501a0572@pvpsit.ac.in</p>
-        <p>Phone no: 9121201545</p>
+        <p>Phone no: 91********</p>
     </div>
     <div class="box-container"style="float:left">
         <p>Name: M. Kalyani</p>
         <p>Branch: CSE</p>
         <p>EMAIL: 21501a05a2@pvpsit.ac.in</p>
-        <p>Phone no: 9502089259</p>
+        <p>Phone no: 91*********</p>
     </div>
 <h2>Faculty Coordinators:</h2>
 <div class="parent-container">
